# swe_ha

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py
app/api/: dependencies.py  routes.py
app/api/v1/: knowledge_base.py
app/core/: config.py
app/schemas/: knowledge_base.py
app/transformers/: fake.py
tests/api/: test_knowledge_base.py
tests/repository/: test_memory_repo.py
